--- a/.github/workflows/fetch_books.yml
+++ b/.github/workflows/fetch_books.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install requests
+        run: pip install requests pyyaml
 
       - name: Fetch currently reading
         env:
